k8s/gateway.yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: devops-app
spec:
  ingressClassName: nginx
  rules:
    - host: devops.local
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /validate
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8003
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8004
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8005
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8006
